--- a/css/narrow-jumbotron.css
+++ b/css/narrow-jumbotron.css
@@ -82,3 +82,7 @@ body {
   background: url(images/jumbotron-slack.png) no-repeat;
   background-size: 100%;
 }
+.jumbotron-bootcamp {
+  background: url(images/2018-global-azure-bootcamp.png) no-repeat;
+  background-size: 100%;
+}
