added @mkeazure twitter feed

--- a/css/narrow-jumbotron.css
+++ b/css/narrow-jumbotron.css
@@ -85,4 +85,5 @@ body {
 .jumbotron-bootcamp {
   background: url(images/2018-global-azure-bootcamp.png) no-repeat;
   background-size: 100%;
+  background-color: #efefef;
 }
